made changes to ui

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,10 @@ button:active {
   letter-spacing: 2px;
 }
 
+.fa-spinner{
+  color: #fff;
+}
+
 .weather__key {
   color: #f16051;
   border-bottom: solid 2px rgba(255,255,255,0.06);
